src/msg/snapshots/tmi__msg__privmsg__tests__parse_privmsg_basic_example.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@badge-info=;badges=;color=#0000FF;display-name=JuN1oRRRR;emotes=;flags=;id=e9d998c3-36f1-430f-89ec-6b887c28af36;mod=0;room-id=11148817;subscriber=0;tmi-sent-ts=1594545155039;turbo=0;user-id=29803735;user-type= :jun1orrrr!jun1orrrr@jun1orrrr.tmi.twitch.tv PRIVMSG #pajlada :dank cam\")"
---
Privmsg {
    channel: Channel(
        "#pajlada",
    ),
    channel_id: "11148817",
    message_id: "e9d998c3-36f1-430f-89ec-6b887c28af36",
    sender: User {
        id: "29803735",
        login: "jun1orrrr",
        name: "JuN1oRRRR",
    },
    reply_to: None,
    text: "dank cam",
    is_action: false,
    badges: [],
    color: Some(
        "#0000FF",
    ),
    custom_reward_id: None,
    bits: None,
    emotes: "",
    timestamp: 2020-07-12T09:12:35.039Z,
}
