src/msg/snapshots/tmi__msg__privmsg__tests__parse_privmsg_display_name_with_middle_space.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@badge-info=;badges=;color=;display-name=Riot\\\\sGames;emotes=;flags=;id=bdfa278e-11c4-484f-9491-0a61b16fab60;mod=1;room-id=36029255;subscriber=0;tmi-sent-ts=1593953876927;turbo=0;user-id=36029255;user-type= :riotgames!riotgames@riotgames.tmi.twitch.tv PRIVMSG #riotgames :test fake message\")"
---
Privmsg {
    channel: "#riotgames",
    channel_id: "36029255",
    msg_id: None,
    id: "bdfa278e-11c4-484f-9491-0a61b16fab60",
    sender: User {
        id: "36029255",
        login: "riotgames",
        name: "Riot\\sGames",
    },
    reply_to: None,
    pinned_chat: None,
    text: "test fake message",
    is_action: false,
    badges: [],
    color: None,
    custom_reward_id: None,
    bits: None,
    emotes: "",
    timestamp: 2020-07-05T12:57:56.927Z,
}
