src/msg/snapshots/tmi__msg__privmsg__tests__parse_privmsg_emote_non_numeric_id.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@badge-info=;badges=;client-nonce=245b864d508a69a685e25104204bd31b;color=#FF144A;display-name=AvianArtworks;emote-only=1;emotes=300196486_TK:0-7;flags=;id=21194e0d-f0fa-4a8f-a14f-3cbe89366ad9;mod=0;room-id=11148817;subscriber=0;tmi-sent-ts=1594552113129;turbo=0;user-id=39565465;user-type= :avianartworks!avianartworks@avianartworks.tmi.twitch.tv PRIVMSG #pajlada :pajaM_TK\")"
---
Privmsg {
    channel: Channel(
        "#pajlada",
    ),
    channel_id: "11148817",
    message_id: "21194e0d-f0fa-4a8f-a14f-3cbe89366ad9",
    sender: User {
        id: "39565465",
        login: "avianartworks",
        name: "AvianArtworks",
    },
    reply_to: None,
    text: "pajaM_TK",
    is_action: false,
    badges: [],
    color: Some(
        "#FF144A",
    ),
    bits: None,
    emotes: "300196486_TK:0-7",
    timestamp: 2020-07-12T11:08:33.129Z,
}
