src/msg/snapshots/tmi__msg__privmsg__tests__parse_privmsg_emotes_1.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@badge-info=;badges=moderator/1;client-nonce=fc4ebe0889105c8404a9be81cf9a9ad4;color=#FF0000;display-name=boring_nick;emotes=555555591:51-52/25:0-4,12-16,18-22/1902:6-10,29-33,35-39/1:45-46,48-49;first-msg=0;flags=;id=3d9540a0-04b6-4bea-baf9-9165b14160be;mod=1;returning-chatter=0;room-id=55203741;subscriber=0;tmi-sent-ts=1696093084212;turbo=0;user-id=111024753;user-type=mod :boring_nick!boring_nick@boring_nick.tmi.twitch.tv PRIVMSG #moscowwbish :Kappa Keepo Kappa Kappa test Keepo Keepo 123 :) :) :P\")"
---
Privmsg {
    channel: Channel(
        "#moscowwbish",
    ),
    channel_id: "55203741",
    message_id: "3d9540a0-04b6-4bea-baf9-9165b14160be",
    sender: User {
        id: "111024753",
        login: "boring_nick",
        name: "boring_nick",
    },
    reply_to: None,
    text: "Kappa Keepo Kappa Kappa test Keepo Keepo 123 :) :) :P",
    is_action: false,
    badges: [
        Moderator,
    ],
    color: Some(
        "#FF0000",
    ),
    custom_reward_id: None,
    bits: None,
    emotes: "555555591:51-52/25:0-4,12-16,18-22/1902:6-10,29-33,35-39/1:45-46,48-49",
    timestamp: 2023-09-30T16:58:04.212Z,
}
