src/msg/snapshots/tmi__msg__privmsg__tests__parse_privmsg_message_with_bits.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@badge-info=;badges=bits/100;bits=1;color=#004B49;display-name=TETYYS;emotes=;flags=;id=d7f03a35-f339-41ca-b4d4-7c0721438570;mod=0;room-id=11148817;subscriber=0;tmi-sent-ts=1594571566672;turbo=0;user-id=36175310;user-type= :tetyys!tetyys@tetyys.tmi.twitch.tv PRIVMSG #pajlada :trihard1\")"
---
Privmsg {
    channel: "#pajlada",
    channel_id: "11148817",
    msg_id: None,
    id: "d7f03a35-f339-41ca-b4d4-7c0721438570",
    sender: User {
        id: "36175310",
        login: "tetyys",
        name: "TETYYS",
    },
    reply_to: None,
    pinned_chat: None,
    text: "trihard1",
    is_action: false,
    badges: [
        Other(
            BadgeData {
                name: "bits",
                version: "100",
                extra: None,
            },
        ),
    ],
    color: Some(
        "#004B49",
    ),
    custom_reward_id: None,
    bits: Some(
        1,
    ),
    emotes: "",
    timestamp: 2020-07-12T16:32:46.672Z,
}
