src/msg/snapshots/tmi__msg__privmsg__tests__parse_privmsg_reply_parent_included.snap
---
source: src/msg/privmsg.rs
expression: "f(\"@badge-info=;badges=;client-nonce=cd56193132f934ac71b4d5ac488d4bd6;color=;display-name=LeftSwing;emotes=;first-msg=0;flags=;id=5b4f63a9-776f-4fce-bf3c-d9707f52e32d;mod=0;reply-parent-display-name=Retoon;reply-parent-msg-body=hello;reply-parent-msg-id=6b13e51b-7ecb-43b5-ba5b-2bb5288df696;reply-parent-user-id=37940952;reply-parent-user-login=retoon;reply-thread-parent-msg-id=6b13e51b-7ecb-43b5-ba5b-2bb5288df696;reply-thread-parent-user-login=retoon;returning-chatter=0;room-id=37940952;subscriber=0;tmi-sent-ts=1673925983585;turbo=0;user-id=133651738;user-type= :leftswing!leftswing@leftswing.tmi.twitch.tv PRIVMSG #retoon :@Retoon yes\")"
---
Privmsg {
    channel: Channel(
        "#retoon",
    ),
    channel_id: "37940952",
    message_id: "5b4f63a9-776f-4fce-bf3c-d9707f52e32d",
    sender: User {
        id: "133651738",
        login: "leftswing",
        name: "LeftSwing",
    },
    reply_to: Some(
        Reply {
            thread_message_id: "6b13e51b-7ecb-43b5-ba5b-2bb5288df696",
            thread_user_login: "retoon",
            message_id: "6b13e51b-7ecb-43b5-ba5b-2bb5288df696",
            sender: User {
                id: "37940952",
                login: "retoon",
                name: "Retoon",
            },
            text: "hello",
        },
    ),
    text: "@Retoon yes",
    is_action: false,
    badges: [],
    color: None,
    custom_reward_id: None,
    bits: None,
    emotes: "",
    timestamp: 2023-01-17T03:26:23.585Z,
}
